--- a/myresume.css
+++ b/myresume.css
@@ -1,3 +1,6 @@
+* {
+  text-decoration: none;
+}
 body {
   background-color: rgba(160, 154, 154, 0.811);
   font-family: Arial, Helvetica, sans-serif;
@@ -17,4 +20,14 @@ article {
   border: 5px dotted blue;
   max-width: 200px;
   margin-left: 25%;
+}
+main {
+  font-weight: 500;
+}
+#style {
+  margin: 0px;
+  padding: 7px;
+  background-color: rgb(0, 0, 0);
+  font-weight: 600;
+  word-spacing: 20px;
 }
